fix:reanimate app & refactor:add Line-Wrapping according to rule 2.5 in html-and-css.md (8.2/15)

--- a/style.css
+++ b/style.css
@@ -28,14 +28,17 @@
   width: 500px;
   margin: 0 auto 0;
 }
+
 .task {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
-.todo-add-task__block {
+
+.todo-add-task__block{
   display: flex;
 }
+
 .list {
   margin: 0;
   padding: 0px;
@@ -60,7 +63,7 @@
   color: #3a3A3a;
 }
 /* Heading */
-.list {
+.title {
   color: #333;
   font-weight: 700;
   font-size: 15px;
